<resources>
    <string name="app_name">LBridge</string>
    <string name="add_last_scan_to_librelink_db">Add last scan to LibreLink db</string>
    <string name="remove_librelink_db">Remove LibreLink db</string>
    <string name="historic_bgs_come_here">Historic BGs come here.</string>
    <string name="current_bg_comes_here">Current BG comes here.</string>
    <string name="app_logs_come_here">App logs come here.</string>
    <string name="mmol_l">mmol/L</string>
    <string name="mg_dl">mg/dl</string>
    <string name="restart_app">Restart app</string>
    <string name="critical_error_occurred">Critical error occurred</string>
    <string name="load_logs_from_db">Load logs from db</string>
    <string name="remove_logs_db">Remove logs db</string>
    <string name="clear_log_window">Clear log window</string>
    <string name="set_draw_overlays_permission">Set draw overlays permission</string>
    <string name="logs">Logs</string>
    <string name="next">Next</string>
    <string name="load_more">Load more</string>
    <string name="set_draw_overlay_permission">Set Draw Overlay Permission</string>
    <string name="start_web_service">Start web service</string>
    <string name="stop_web_service">Stop web service</string>
    <string name="set_fake_serial_number_for_last_sensor_in_db">Set fake serial number for last sensor in db</string>
    <string name="for_developers">For Developers</string>
    <string name="end_last_sensor_in_db">End last sensor in db</string>
    <string name="developing_options_warning">Orange buttons dangerous.
        Use internet-offline mode with subsequent database deletion.
        Data that will be overwritten may already be synced with libreview.</string>
    <string name="exit">Exit</string>
    <string name="create_librelink_db">Create LibreLink db</string>
    <string name="remove_sensor_aliases">Remove sensor aliases</string>
</resources>