<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:text="@string/app_logs_come_here"
            android:background="#000000" />

        <Button
            android:id="@+id/sugarAddingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_last_scan_to_librelink_db"
            android:layout_below="@id/logTextView"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/removeLibrelinkDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_librelink_db"
            android:layout_below="@id/sugarAddingBtn"
            android:layout_centerHorizontal="true" />


        <TextView
            android:id="@+id/currentBgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="#000000"
            android:text="@string/current_bg_comes_here"
            android:layout_below="@id/removeLibrelinkDB" />

        <TextView
            android:id="@+id/bgHistoryView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="#000000"
            android:text="@string/historic_bgs_come_here"
            android:layout_below="@id/currentBgView" />

    </RelativeLayout>
</ScrollView>
