<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/removeLogsDb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_centerHorizontal="true"
            android:text="@string/remove_logs_db" />

        <Button
            android:id="@+id/clearLogWindowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/removeLogsDb"
            android:layout_centerHorizontal="true"
            android:text="@string/clear_log_window" />


        <TextView
            android:id="@+id/logTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/clearLogWindowBtn"
            android:layout_margin="16dp"
            android:background="#000000"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/load_more" />

    </RelativeLayout>

</ScrollView>
